added routes: questions, answers. made user_answers table unique so user cannot answer one question twice
